--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production node server/server.js",
+    "dev": "concurrently \"run-p tsc-dev webpack\" \"nodemon tsCompiled/server/server.js\"",
+    "tsc-dev": "tsc --watch",
+    "webpack": "cross-env NODE_ENV=development webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -18,28 +23,51 @@
   },
   "homepage": "https://github.com/benjitrosch/algoclash#readme",
   "dependencies": {
+    "codemirror": "^5.59.4",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.11.18",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "styled-components": "^5.2.1",
+    "ts-loader": "^8.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.4.0",
     "nodemon": "^2.0.7",
+    "puppeteer": "^8.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-refresh": "^0.9.0",
+    "react-refresh-webpack-plugin": "^0.1.0",
+    "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.2.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "zombie": "^6.1.4"
   }
 }
