--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production webpack",
     "build": "cross-env NODE_ENV=production node server/server.js",
-    "dev": "concurrently \"run-p tsc-dev webpack\" \"nodemon tsCompiled/server/server.js\"",
+    "dev": "concurrently \"run-p tsc-dev webpack\" \"cross-env NODE_ENV=development nodemon tsCompiled/server/server.js\"",
     "tsc-dev": "tsc --watch",
     "webpack": "cross-env NODE_ENV=development webpack serve --open"
   },
