--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/benjitrosch/algoclash#readme",
   "dependencies": {
+    "@skidding/react-codemirror": "^1.0.2",
     "codemirror": "^5.59.4",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
@@ -31,6 +32,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.11.18",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^5.0.0",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
