--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algoclash",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./client/index.tsx",
   "scripts": {
     "test": "jest --verbose",
     "start": "cross-env NODE_ENV=production webpack",
