--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
+    "react-github-login": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
