--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/benjitrosch/algoclash#readme",
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
+    "@babel/standalone": "^7.13.9",
     "@skidding/react-codemirror": "^1.0.2",
     "codemirror": "^5.59.4",
     "cookie-parser": "^1.4.5",
