--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^5.1.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.2.0",
+    "javascript-terminal": "^1.1.1",
     "mini-css-extract-plugin": "^1.3.9",
     "mocha": "^8.3.0",
     "mongoose": "^5.11.18",
