--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "^5.0.0",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-github-login": "^1.0.3",
     "react-google-login": "^5.2.2",
