--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "jest --verbose",
     "start": "concurrently \"npm run compile -- -w\" \"cross-env NODE_ENV=production node tsCompiled/server/server.js\"",
-    "postinstall": "tsc && mv -i -v public dist/ && rm -v -rf src",
     "build": "cross-env NODE_ENV=production webpack",
     "compile": "tsc -p ./",
     "dev": "concurrently \"run-p tsc-dev webpack-dev\" \"cross-env NODE_ENV=development nodemon tsCompiled/server/server.js\"",
@@ -53,7 +52,8 @@
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.2",
     "styled-components": "^5.2.1",
-    "ts-loader": "^8.0.17"
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -79,7 +79,6 @@
     "style-loader": "^2.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
-    "typescript": "^4.2.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
