--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "concurrently \"npm run compile -- -w\" \"cross-env NODE_ENV=production node tsCompiled/server/server.js\"",
     "build": "cross-env NODE_ENV=production webpack",
     "compile": "tsc -p ./",
+    "postinstall": "npm run compile",
     "dev": "concurrently \"run-p tsc-dev webpack-dev\" \"cross-env NODE_ENV=development nodemon tsCompiled/server/server.js\"",
     "tsc-dev": "tsc --watch",
     "webpack-dev": "cross-env NODE_ENV=development webpack serve --open"
