--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./client/index.tsx",
   "scripts": {
-    "test": "jest --verbose",
+    "test": "jest --json --outputFile=jest-results.json",
     "start": "cross-env NODE_ENV=production webpack",
     "build": "cross-env NODE_ENV=production node tsCompiled/server/server.js",
     "dev": "concurrently \"run-p tsc-dev webpack-dev\" \"cross-env NODE_ENV=development nodemon tsCompiled/server/server.js\"",
@@ -20,6 +20,12 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/benjitrosch/algoclash/issues"
+  },
+  "jest-multi-test-result-processor": {
+    "processors": [
+      "jest-junit",
+      "html-jest-reporter"
+    ]
   },
   "homepage": "https://github.com/benjitrosch/algoclash#readme",
   "dependencies": {
@@ -67,6 +73,8 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
     "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
+    "jest-multi-test-result-processor": "^1.0.0",
     "jest-puppeteer": "^4.4.0",
     "nodemon": "^2.0.7",
     "puppeteer": "^8.0.0",
@@ -77,10 +85,12 @@
     "style-loader": "^2.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
-    "typescript": "^4.2.2",
+    "typescript": "^4.0.3",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "zombie": "^6.1.4"
+    "zombie": "^6.1.4",
+    "gts": "^3.1.0",
+    "@types/node": "^14.11.2"
   }
 }
