--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,5 +76,6 @@
       "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
       "resolveJsonModule": true /*  Include modules imported with '.json' extension. Requires TypeScript version 2.9 or later. */
     },
-    "include": ["server", "client"]
+    "include": ["server", "client"],
+    "exclude": ["json"]
   }
