--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@babel/runtime": "^7.13.9",
     "@babel/standalone": "^7.13.9",
     "@skidding/react-codemirror": "^1.0.2",
+    "chai": "^4.3.3",
     "codemirror": "^5.59.4",
+    "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
-    "concurrently": "^6.0.0",
     "css-loader": "^5.1.1",
+    "expect.js": "^0.3.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.2.0",
     "javascript-terminal": "^1.1.1",
