--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/node": "^14.11.2",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
+    "gts": "^3.1.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "jest-multi-test-result-processor": "^1.0.0",
@@ -93,8 +95,6 @@
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "zombie": "^6.1.4",
-    "gts": "^3.1.0",
-    "@types/node": "^14.11.2"
+    "zombie": "^6.1.4"
   }
 }
